Woops, shouldn't have removed that

--- a/pom.xml
+++ b/pom.xml
@@ -476,12 +476,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
             <scope>compile</scope>
-        </dependency-->
+        </dependency>
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
