--- a/src/main/resources/configuration/missions.yml
+++ b/src/main/resources/configuration/missions.yml
@@ -6,6 +6,7 @@
 MissionGUISize: 4
 Missions-Enabled: true
 Missions-GUI-Title: '&8&lFaction Missions'
+Tribute-GUI-Title: '&8&lMissions Tribute'
 MaximumMissionsAllowedAtOnce: 1
 Allow-Cancellation-Of-Missions: true
 Mission-Progress-Format: '&b&lProgression: &f{progress}&7/&e{total}'
@@ -27,7 +28,7 @@ Randomization:
     Slot: 31
 DenyMissionsMoreThenOnce: true #this setting to true, means that if they complete a mission they cannot redo the same mission
 
-#Mission Types: KILL, MINE, PLACE, FISH, TAME, ENCHANT, CONSUME
+#Mission Types: KILL, MINE, PLACE, FISH, TAME, ENCHANT, CONSUME, BREED, TRIBUTE
 Missions:
   FillItem:
     Material: BLACK_STAINED_GLASS_PANE
