--- a/src/main/resources/configuration/missions.yml
+++ b/src/main/resources/configuration/missions.yml
@@ -9,7 +9,10 @@ Missions-GUI-Title: '&8&lFaction Missions'
 Tribute-GUI-Title: '&8&lMissions Tribute'
 MaximumMissionsAllowedAtOnce: 1
 Allow-Cancellation-Of-Missions: true
-CancellableMissionLore: "&c&oRight-Click to forfeit this mission."
+CancellableMissionLore: "&c&oRight-Click to forfeit this mission for $1000."
+CancelMissionCost: 1000
+PayCancelMissionCostWithPoints: false
+FactionPaysCancelMissionCost: true
 Mission-Progress-Format: '&b&lProgression: &f{progress}&7/&e{total}'
 Randomization:
   Enabled: false
