--- a/src/main/resources/configuration/missions.yml
+++ b/src/main/resources/configuration/missions.yml
@@ -32,7 +32,12 @@ Randomization:
     Slot: 31
 DenyMissionsMoreThenOnce: true #this setting to true, means that if they complete a mission they cannot redo the same mission
 DeniedMissionMaterial: "BARRIER"
-DeniedMissionExtraLore: "&8&cYou've already completed this mission."
+DeniedMissionExtraLore: "&cYou've already completed this mission."
+Prestige: #requires DenyMissionsMoreThenOnce = true
+  Enabled: false
+  CongratulationMessage: "&aYour faction has completed all the missions!"
+  Reward:
+    Commands: [ "f powerboost faction %faction% 1" ]
 
 #Mission Types: KILL, MINE, PLACE, FISH, TAME, ENCHANT, CONSUME, BREED, TRIBUTE
 Missions:
