--- a/pom.xml
+++ b/pom.xml
@@ -25,89 +25,88 @@
                 <directory>src/main/resources/</directory>
             </resource>
         </resources>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.2.1</version>
-                    <configuration>
-                        <createDependencyReducedPom>false</createDependencyReducedPom>
-                        <relocations>
-                            <relocation>
-                                <pattern>me.lucko.helper</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.me.lucko.helper</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>com.github.cryptomorin</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.xseries</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>com.github.stefvanschie.inventoryframework</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.stefvanschie.inventoryframework
-                                </shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>org.bstats</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.org.bstats</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>net.dv8tion</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.net.dv8tion</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>xyz.xenondevs</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.particlelib</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>mkremins.fanciful</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.mkremins.fanciful</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>com.google.gson</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.com.google.gson</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>com.darkblade12</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.com.darkblade12</shadedPattern>
-                            </relocation>
-                            <relocation>
-                                <pattern>de.tr7zw</pattern>
-                                <shadedPattern>com.massivecraft.factions.shade.nbtapi</shadedPattern>
-                            </relocation>
-                        </relocations>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>shade</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.3.2</version>
-                    <configuration>
-                        <finalName>SaberFactions</finalName>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.4.1</version>
-                </plugin>
-            </plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <relocations>
+                        <relocation>
+                            <pattern>me.lucko.helper</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.me.lucko.helper</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.cryptomorin.xseries</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.xseries</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.github.stefvanschie.inventoryframework</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.stefvanschie.inventoryframework</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.org.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>net.dv8tion</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.net.dv8tion</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>xyz.xenondevs</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.particlelib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>mkremins.fanciful</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.mkremins.fanciful</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.google.gson</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.com.google.gson</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.darkblade12</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.com.darkblade12</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.tr7zw</pattern>
+                            <shadedPattern>com.massivecraft.factions.shade.nbtapi</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <finalName>SaberFactions</finalName>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
@@ -139,6 +138,7 @@
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
             <version>9.1.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>mcMMO</groupId>
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>com.github.stefvanschie.inventoryframework</groupId>
             <artifactId>IF</artifactId>
-            <version>0.10.7</version>
+            <version>0.5.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -415,16 +415,11 @@
             <groupId>mkremins</groupId>
             <artifactId>fanciful</artifactId>
             <version>0.4.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/dependencies/fanciful-0.4.0-SNAPSHOT.jar</systemPath>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <artifactId>*</artifactId>
                     <groupId>shaded</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>*</artifactId>
-                    <groupId>gson</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
