--- a/pom.xml
+++ b/pom.xml
@@ -122,12 +122,12 @@
             <version>2.10.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>me.lucko</groupId>
             <artifactId>commodore</artifactId>
             <version>2.2</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency-->
         <!--dependency>
             <groupId>com.mojang</groupId>
             <artifactId>brigadier</artifactId>
